Deploy scripts, css fix

--- a/src/Lily/UserBundle/Resources/views/Profile/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Profile/index.html.twig
@@ -4,7 +4,7 @@
 
 {{ parent() }} 	   
 
-{% stylesheets 'css/backoffice/profile.css' 'css/utils/daterangepicker.css' filter='cssrewrite' output='css/compiled/statistics.css' %}  
+{% stylesheets 'css/backoffice/profile.css' 'css/utils/daterangepicker.css' filter='cssrewrite' output='css/compiled/profile.css' %}  
 
   <link rel="stylesheet" href="{{ asset_url }}" type="text/css" /> 
 
