--- a/web/css/backoffice/faq.css
+++ b/web/css/backoffice/faq.css
@@ -40,7 +40,7 @@ body {
   max-width: 90%;
   height: 18px;
 }
-.icon-reorder {
+.faq-item .icon-reorder {
   font-size: 17px;
   vertical-align: middle;
   margin-left: -5px;
