--- a/web/css/backoffice/statistics.css
+++ b/web/css/backoffice/statistics.css
@@ -157,7 +157,7 @@ USER
 
 
 .users-list-item.active {
-  background: #579ad7;
+  background: #99cb6d;
   color: white;
 }
 
@@ -263,7 +263,7 @@ LOGS
 }
 
 .redirection {
-  background: #59cc4d;
+  background: #a6d87a;
   color: white;
 }
 
