--- a/src/Lily/ChatBundle/Resources/views/Operator/index.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/index.html.twig
@@ -136,7 +136,7 @@
 'js/wysiwyg/advanced_unwrap.js' 
 'js/bower_components/wysihtml5/src/wysihtml5.js' 
 
-'js/vendor/autobahn-v1.min.js' 
+'js/vendor/autobahn-v1.js' 
 
 'js/backoffice/chat/libs/modernizr-custom.js' 
 'js/vendor/moment.js' 
