Chat.js refactored

--- a/src/Lily/ChatBundle/Resources/views/Operator/Dashboard/skeleton.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/Dashboard/skeleton.html.twig
@@ -1,19 +1,16 @@
 <section class="row wrapper-lg scrollable">
 
   <div class="col-lg-6">
-  	<section class="js-dashboard-operators-info panel bg-info lter no-borders operators">
+  	<section class="js-dashboard-operators-info panel bg-info lter no-borders">
     <!-- 
         Operators info 
     -->
     </section>
       
-    <section class="panel portlet-item list-connected">
-      <header class="panel-heading">Connectés</header>
-      <ul class="list-group alt">
-      <!-- 
-          List of connected operators 
-      -->
-      </ul>
+    <section class="js-dashboard-connected panel">
+    <!-- 
+        Connected operators 
+    -->
     </section> 
   </div>
   
@@ -24,7 +21,7 @@
     -->
     </section> 
     
-    <section class="js-dashboard-loadings panel">
+    <section class="js-dashboard-loading panel">
     <!-- 
         Loadings chart 
     -->
