--- a/src/Lily/ChatBundle/Resources/views/Operator/Dashboard/loading.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/Dashboard/loading.html.twig
@@ -1,12 +1,9 @@
 <header class="panel-heading">Taux de charge</header>
 <div class="panel-body text-center">
-  <div class="inline">
-    <div class="loadings-chart" data-percent="0" data-line-width="12" data-loop="false" data-size="160">
-      <span class="h2">0</span>%
-      <canvas class="loadings-chart-canvas"></canvas>
-    </div>
-  </div>                      
-</div>
+  <div class="js-dashboard-loading-chart" data-percent="0" data-line-width="12" data-loop="false" data-size="160">
+    <span class="h2">0</span>
+  </div>
+</div>                      
 <div class="panel-footer">
   <small>Taux calculé en fonction du nombres de visiteurs et d'opérateurs.</small>
 </div>
