--- a/web/css/backoffice/chat.css
+++ b/web/css/backoffice/chat.css
@@ -286,7 +286,7 @@ i {
   font-size: 14px;
 }
 
-.modal-transfer, .modal-close, .modal-ban {
+.modal-transfer, .modal-close, .modal-ban, .modal-unavailable {
   margin: 0;
   position: fixed;
   width: 500px;
@@ -294,6 +294,17 @@ i {
   left: calc(50% - 250px) !important;
   z-index: 9999;
   outline: 0;
+}
+
+.modal-connection-lost {
+  margin: 0;
+  position: absolute;
+  width: 500px;
+  height: 400px;
+  top: calc(50% - 50px) !important;
+  left: calc(50% - 250px) !important;
+  z-index: 9999;
+  opacity: 1;
 }
 
 .modal-transfer .list-group-item {
@@ -530,23 +541,47 @@ i {
   color: #fcc44d;
 }
 
-#dashboard-section .operators small {
+.js-dashboard-container {
+  padding: 30px 15px;
+}
+
+.js-dashboard-operators-info small {
   margin-top: 0;
 }
 
-#dashboard-section .operators h5 {
+.js-dashboard-operators-info h5 {
   margin-bottom: 5px;
   color: #427789;
 }
 
-
-#dashboard-section .visitors small {
+.js-dashboard-visitors-info small {
   margin-top: 0;
 }
 
-#dashboard-section .visitors h5 {
+.js-dashboard-visitors-info h5 {
   margin-bottom: 5px;
   color: #427789;
+}
+
+.js-dashboard-loading-chart {
+  height: 160px;
+  position: relative;
+}
+
+.js-dashboard-loading-chart span {
+  position: absolute;
+  text-align: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  line-height: 155px;
+  font-size: 28px;
+}
+
+.js-dashboard-loading-chart canvas {
+  position: absolute;
+  top: 0;
+  margin-left: -85px;
 }
 
 .header-control i.disable {
@@ -590,10 +625,10 @@ i {
   
   .list-record-item .informations {
   	width: 100%;
-	max-width: -moz-calc(100% - 130px);
+    max-width: -moz-calc(100% - 130px);
     max-width: -webkit-calc(100% - 130px);
-	max-width: -o-calc(100% - 130px);
-	max-width: calc(100% - 130px);
+    max-width: -o-calc(100% - 130px);
+    max-width: calc(100% - 130px);
   }
   
   .modal-close, .modal-ban, .modal-transfer {
@@ -611,14 +646,14 @@ i {
   }
 
   .modal-content {
-	height: 100%;
-	border: 0;
-	border-radius: 0;
+	  height: 100%;
+    border: 0;
+    border-radius: 0;
   }
 
   .modal-footer {
-	position: absolute;
-	bottom: 0;
+	  position: absolute;
+    bottom: 0;
   }
 
 }
