Redirections & Faq modal fix

--- a/src/Lily/KnowledgeBundle/Resources/views/Faq/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Faq/index.html.twig
@@ -87,8 +87,8 @@
   <script type="text/template" id="breadcrumbTpl">
     {% include 'LilyKnowledgeBundle:Faq:breadcrumb.html.twig' %}
   </script>
-  <script type="text/template" id="modalTpl">
-    {% include 'LilyBackOfficeBundle:Utils:modalAlert.html.twig' %}
+  <script type="text/template" id="modalAlertTpl">
+    {% include 'LilyBackOfficeBundle:Utils/Modal:alert.html.twig' %}
   </script>
 
 {% endblock %}
