--- a/src/Lily/KnowledgeBundle/Resources/views/Redirections/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Redirections/index.html.twig
@@ -84,8 +84,8 @@
     <script type="text/template" id="editTpl">
       {% include 'LilyKnowledgeBundle:Redirections:edit.html.twig' %}
     </script>
-    <script type="text/template" id="modalTpl">
-      {% include 'LilyBackOfficeBundle:Utils:modalAlert.html.twig' %}
+    <script type="text/template" id="modalAlertTpl">
+      {% include 'LilyBackOfficeBundle:Utils/Modal:alert.html.twig' %}
     </script>
   {% endblock %}
 
