--- a/web/css/backoffice/redirection.css
+++ b/web/css/backoffice/redirection.css
@@ -32,6 +32,15 @@ REDIRECTION
   right: 0;
   margin: auto;
 }
+.modal-default-redirection {
+  margin: 0;
+  position: fixed;
+  width: 500px;
+  top: calc(50% - 100px) !important;
+  left: calc(50% - 250px) !important;
+  z-index: 9999;
+  outline: 0;
+}
 @media (max-width: 767px) {
   .redirection-action,
   .delete-action {
