Chat security improvement, little css fix

--- a/src/Lily/BackOfficeBundle/Resources/views/menu.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/menu.html.twig
@@ -10,9 +10,9 @@
         <i class="icon-comment-alt"></i>
       </a>
     </header>        
-    <section>
+    <section class="scrollable bg-dark dk">
       <!-- User section -->
-      <div class="lt nav-user hidden-xs pos-rlt ">
+      <div class="lt nav-user hidden-xs pos-rlt">
         <div class="nav-avatar pos-rlt">
           <a href="#" class="thumb-sm avatar animated rollIn" data-toggle="dropdown">
             <img src="{{ app.user|avatar }}" width="70" height="70">
