--- a/src/Lily/ChatBundle/Resources/views/Operator/index.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/index.html.twig
@@ -101,7 +101,15 @@
 	{% block bootstrap %}
     {% autoescape false %}
 	    <script type="text/javascript">
+  	    
   	    var config = {};
+  	    
+  	    {% if app.environment == 'dev' %}
+  	      config.wsserver = 'ws://develop.saio.fr';
+  	    {% else %}
+  	      config.wsserver = 'ws://ws.saio.fr';
+        {% endif %}
+  	    
         config.root = '{{ app.request.getBaseURL() }}/lily/api/chat';
         config.licence = '{{ app.user.client.licence }}';
         config.userId = '{{ app.user.id }}';
