Develop deploy script

--- a/src/Lily/KnowledgeBundle/Resources/views/Questions/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Questions/index.html.twig
@@ -3,7 +3,7 @@
 
       {{ parent() }} 	   
 
-      {% stylesheets 'js/nestable/nestable.css' 'js/fuelux/fuelux.css' 'css/icon.css' 'css/questions/left-menu/meter.css' 'css/questions/left-menu/categories.css' 'css/questions/questions.css' 'css/questions/left-menu.css' 'css/questions/right-panel/right-panel.css' 'css/questions/right-panel/answer.css' 'css/questions/right-panel/versions.css' 'css/questions/header.css' filter='cssrewrite' output='css/compiled/questions.css' %}      
+      {% stylesheets 'js/nestable/nestable.css' 'css/icon.css' 'css/questions/left-menu/meter.css' 'css/questions/left-menu/categories.css' 'css/questions/questions.css' 'css/questions/left-menu.css' 'css/questions/right-panel/right-panel.css' 'css/questions/right-panel/answer.css' 'css/questions/right-panel/versions.css' 'css/questions/header.css' filter='cssrewrite' output='css/compiled/questions.css' %}      
   
       <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />     
       {% endstylesheets %} 
