--- a/src/Lily/BackOfficeBundle/Resources/views/Config/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Config/index.html.twig
@@ -4,7 +4,7 @@
 
 {{ parent() }} 	   
 
-{% stylesheets 'css/backoffice/config.css' 'js/fuelux/fuelux.css' filter='cssrewrite' output='css/compiled/config.css' %}      
+{% stylesheets 'css/backoffice/config.css' filter='cssrewrite' output='css/compiled/config.css' %}      
 <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />     
 
 {% endstylesheets %} 
