--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/index.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/index.html.twig
@@ -21,7 +21,7 @@
 	{% block content %}
     
     <!-- .vbox -->
-    <section class="vbox content-wrapper">
+    <section class="vbox js-skeleton-container">
     </section>
     <!-- /.vbox -->
 
