--- a/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
@@ -29,6 +29,8 @@ filter='cssrewrite' %}
     <script src="{{ asset('js/ie/fix.js') }}" cache="false"></script>
   <![endif]-->
 
+  <link rel="icon" href="{{ asset('images/home/favicon-saio.png') }}" />
+
 </head>
 <body>
 
