--- a/src/Lily/UserBundle/Resources/views/Admin/Users/edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/Users/edit.html.twig
@@ -46,7 +46,7 @@
                 </button>
                 <ul class="dropdown-menu dropdown-select">
                   <li><a name="admin" href="#"><input type="checkbox">Administrateur</a></li>
-                  <li><a name="chat" href="#"><input type="checkbox">Livechat</a></li>
+                  <li><a name="chat" href="#"><input type="checkbox">Live Chat</a></li>
                   <li><a name="knowledge" href="#"><input type="checkbox">Base de connaissance</a></li>
                 </ul>
     					</div>
