Users.js avatar bug fix

--- a/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
@@ -48,7 +48,7 @@
     {% autoescape false %}
     <script type="text/javascript">
       var config = {};
-      config.root = '{{ app.request.getBaseURL() }}/lily/api/user';
+      config.root = '{{ app.request.getBaseURL() }}/lily/api';
       config.licence = '{{ app.user.client.licence }}';
       config.maxusers = '{{ app.user.client.config.maxusers }}';
     </script>
