change ws server url

--- a/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
@@ -122,6 +122,11 @@
 	    config.licence = "{{ licence }}";
     	config.root = '{{ app.request.getBaseURL() }}/app';
 	    config.chatAvailable = "{{ chatAvailable }}";
+	    {% if app.environment == 'dev' %}
+			config.wsserver = 'ws://develop.saio.fr';
+			{% else %}
+			config.wsserver = 'ws://ws.saio.fr';
+			{% endif %}
 		</script>
 		{% endautoescape %}
 	{% endblock %}
