--- a/src/Lily/ChatBundle/Resources/views/Operator/skeleton.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/skeleton.html.twig
@@ -25,7 +25,7 @@
     <li class="live-nav"><a href="#live">Discussions<b class="badge bg-warning pull-right hide">0</b></a></li>
   </ul>
 </header>
-<section class="js-main-container">
+<section class="js-main-container scrollable">
   <!--
     Here Goes Live & Dashboard
   -->  	  
