Remove username, fix new account creation

--- a/src/Lily/BackOfficeBundle/Resources/views/Dashboard/Chat/footer.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Dashboard/Chat/footer.html.twig
@@ -1,7 +1,7 @@
 <footer class="panel-footer">
   <div class="row text-center">
     <a data-type="conversations" class="col-xs-4 b-r">
-      <p class="h3 font-bold m-t"><%-parseFloat(conversations*1).toFixed(2) %></p>
+      <p class="h3 font-bold m-t"><%-parseInt(conversations) %></p>
       <p class="text-muted">Conversations / heure</p>
     </a>
     <a data-type="duration" class="col-xs-4 b-r">
