--- a/web/css/app/lily.css
+++ b/web/css/app/lily.css
@@ -376,6 +376,30 @@ a{
 
 }
 
+.info-popup {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	width: 200px;
+	z-index: 99999;
+	color: #fff;
+	padding: 5px;
+	font-size: 12px;
+	text-align: center;
+	border-radius: 2px 2px 0 0;
+	box-shadow: 1px 3px 12px 0px rgba(98, 98, 98, 0.54);
+}
+
+.success-info {
+	background: rgba(114, 174, 98, 1);
+}
+
+.error-info {
+	background: #EC7171;
+}
+
 /*********************
 HEADER
 *********************/
@@ -1396,4 +1420,70 @@ ANIMATIONS
 }
 @keyframes moveFromRight {
 	from { transform: translateX(100%); }
+}
+
+@-webkit-keyframes fadeInUp {
+	0% {
+		opacity: 0;
+		-webkit-transform: translateY(20px);
+	}
+
+	100% {
+		opacity: 1;
+		-webkit-transform: translateY(0);
+	}
+}
+
+@-moz-keyframes fadeInUp {
+	0% {
+		opacity: 0;
+		-moz-transform: translateY(20px);
+	}
+
+	100% {
+		opacity: 1;
+		-moz-transform: translateY(0);
+	}
+}
+
+@-o-keyframes fadeInUp {
+	0% {
+		opacity: 0;
+		-o-transform: translateY(20px);
+	}
+
+	100% {
+		opacity: 1;
+		-o-transform: translateY(0);
+	}
+}
+
+@keyframes fadeInUp {
+	0% {
+		opacity: 0;
+		transform: translateY(20px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+.animated {
+	-webkit-animation-duration: 0.45s;
+	   -moz-animation-duration: 0.45s;
+	     -o-animation-duration: 0.45s;
+	        animation-duration: 0.45s;
+	-webkit-animation-fill-mode: both;
+	   -moz-animation-fill-mode: both;
+	     -o-animation-fill-mode: both;
+	        animation-fill-mode: both;
+}
+
+.animated.fadeInUp {
+	-webkit-animation-name: fadeInUp;
+	-moz-animation-name: fadeInUp;
+	-o-animation-name: fadeInUp;
+	animation-name: fadeInUp;
 }
