--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -16,7 +16,7 @@
 	            <div class="alert alert-warning alert-block">
 	            <button type="button" class="close" data-dismiss="alert"><i class="icon-remove"></i></button>
 	            <h4><i class="icon-bell-alt"></i>Erreur!</h4> 
-	            <p>{{ error|trans }}</p>
+	            <p>{{ error.messageKey|trans(error.messageData, 'security') }}</p>
 	            </div>
 	          {% endif %}
               <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
@@ -36,7 +36,7 @@
             <button type="submit" id="_submit" name="_submit"  class="btn btn-info">Connexion</button>
             <div class="line line-dashed"></div>
             <p class="text-muted text-center"><small>Vous n'avez pas encore de compte?</small></p>
-            <a href="#" class="btn btn-white btn-block">Contactez-nous</a>
+            <a href="{{ path('home_contact') }}" class="btn btn-white btn-block">Contactez-nous</a>
           </form>
         </section>
       </div>
