--- a/src/Lily/KnowledgeBundle/Resources/views/Faq/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Faq/index.html.twig
@@ -98,7 +98,7 @@
 
   <script type="text/javascript">
     var config = {};
-    config.root = '{{ app.request.getBaseURL() }}/lily/api/faq';
+    config.root = '{{ app.request.getBaseURL() }}/lily/api';
   </script>
 
   {% endautoescape %}
