--- a/src/Lily/KnowledgeBundle/Resources/views/Redirections/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Redirections/index.html.twig
@@ -93,7 +93,7 @@
     {% autoescape false %}
       <script type="text/javascript">
         var config = {};
-        config.root = '{{ app.request.getBaseURL() }}/lily/api/redirections';
+        config.root = '{{ app.request.getBaseURL() }}/lily/api';
 	    </script>
     {% endautoescape %}
 	{% endblock %}
